<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>xyz.hydar</groupId>
  <artifactId>flashserver</artifactId>
  <version>3.2</version>
  <name>FlashPrivateServer</name>
  <description>Private server for Ninja Kiwi flash games.</description>
  <packaging>jar</packaging>
  <build>
    <sourceDirectory>src/java</sourceDirectory>
    <resources>
      <resource>
        <directory>src/java</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
	<plugin>
		<groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <mainClass>xyz.hydar.flash.mp.FlashLauncher</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>19</release>
          <compilerArgs>
			  --enable-preview
		  </compilerArgs>
        </configuration>
      </plugin>
    </plugins>
    
  </build>
</project>